--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ repositories {
 dependencies {
 	compile('org.projectlombok:lombok')
 	compile('org.springframework.boot:spring-boot-starter-web')
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+	compile('org.springframework.data:spring-data-jpa:1.10.4.RELEASE')
 	runtime('com.h2database:h2')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
